[package]
name = "wayclip-api"
version = "0.1.59"
edition = "2021"

[[bin]]
name = "wayclip-api"
path = "src/main.rs"

[package.metadata.sqlx]
database = "postgres"
data-source = "DATABASE_URL"

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-lab = "0.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.2"
url = "2.2"
dotenvy = "0.15"
futures-util = "0.3"
env_logger = "0.11.8"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
] }
uuid = { version = "1.18.0", features = ["serde"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-actix-web = "0.7.19"
lazy_static = "1.5.0"
config = "0.15.14"
async-trait = "0.1.89"
anyhow = "1.0.99"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
actix-ratelimit = "0.3.1"
actix-extensible-rate-limit = "0.4.0"
wayclip_core = "0.1.13"
russh = { version = "0.54.3", features = ["async-trait"] }
russh-sftp = "2.1.1"
ssh-key = "0.6.7"
base64 = "0.22.1"
ssh2 = "0.9.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = "0.1.17"
bytes = "1.10.1"
actix-cors = "0.7.1"
http-range = "0.1.5"
http = "1.3.1"
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
argon2 = "0.5.3"
rand_core = "0.9.3"
totp-rs = { version = "5.7.0", features = ["otpauth"] }
rand = "0.9.2"
lettre = { version = "0.11.18", features = [
  "smtp-transport",
  "tokio1-rustls-tls",
  "tokio1-native-tls",
] }
image = "0.25.8"
qrcode = "0.14.1"
r2d2 = "0.8.10"
